--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
     <!-- site header start -->
     <header class="header">
-        .container
+        <div class="container">
+            <div class="header-wrapper">
+                <h2>Salom</h2>
+            </div>
+        </div>
     </header>
 </body>
 </html>
