--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
         <h2>Azizbek</h2>
         <h3>Salom</h3>
     </main>
+    <footer class="footer">
+        <div class="footer-inner">
+            <p class="footer-text">github da "team" bolib ishlash KERAK</p>
+        </div>
+    </footer>
 </body>
 </html>
